# nu_plugin_logic

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: lib.rs  main.rs  store.rs
src/commands/: facts.rs  mod.rs  solve.rs
src/engine/: convert.rs  mod.rs  native.rs  search.rs  substitution.rs  term.rs  unify.rs
