[package]
name = "nu_plugin_logic"
version = "0.1.1"
edition = "2024"
description = "Prolog-style pattern matching and relational search for Nushell"
license = "MIT"
readme = "README.md"
keywords = ["nushell", "plugin", "logic", "prolog", "unification"]
categories = ["command-line-utilities"]
repository = "https://github.com/unthingable/nu_plugin_logic"

[[bin]]
name = "nu_plugin_logic"
path = "src/main.rs"

[dependencies]
nu-plugin = "0.111.0"
nu-protocol = { version = "0.111.0", features = ["plugin"] }

[dev-dependencies]
nu-plugin-test-support = "0.111.0"
